# CS100-Lab4

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
test/: CMakeLists.txt  awardTests.cpp  testHailstone.cpp  testTri.cpp
